--- a/example/components/lungo/lungo.css
+++ b/example/components/lungo/lungo.css
@@ -28,8 +28,8 @@ section[data-transition="fade"]:hide{opacity:0}
 header,footer{position:absolute;left:0;width:100%;display:block;z-index:1}
 header{top:0;height:44px;line-height:44px;}
 header .title{margin-left:4px;float:left;z-index:-1;font-size:1.44em;}
-header .title img{height:24px}
 header .title.centered{position:absolute;left:32px;right:32px;text-align:center;display:inline-block}
+header img.title{height:26px;margin:9px auto}
 footer{bottom:0;height:44px}
 
 article{position:absolute;top:0;bottom:0;width:inherit;height:auto;visibility:hidden;display:none;z-index:0;}
@@ -103,12 +103,12 @@ aside.small nav a:first-child{margin-top:8px}
 nav.groupbar,footer nav{display:-webkit-box;display:-moz-box;display:box;-webkit-box-pack:justify;-moz-box-pack:justify;box-pack:justify;width:100%;}
 nav.groupbar > a,footer nav > a{-webkit-box-flex:1;-moz-box-flex:1;box-flex:1}
 header nav a{padding:0 11px !important;z-index:1000;float:left}
-header nav a.button{margin:6px 2px 0 2px;font-size:.9em;line-height:30px;}
-header nav a.button > .icon{font-size:1.3em;height:18px;display:inline-block}
+header nav .button,header nav button{margin:6px 2px 0 2px;line-height:31px !important;}
+header nav .button > .icon,header nav button > .icon{font-size:1.5em;position:relative;top:3px;height:20px;width:20px;line-height:20px;display:inline-block}
 header nav.right a.button:last-child{margin-right:6px}
 header nav:not(.right) a.button:first-child{margin-left:6px}
 header nav a:not(.button){height:44px;}
-header nav a:not(.button) > .icon{font-size:1.7em}
+header nav a:not(.button) > .icon{font-size:1.8em}
 header nav .tag{position:relative;top:-12px;left:-12px;margin-right:-20px}
 header nav abbr{font-size:.9em;font-weight:700}
 header nav .icon ~ abbr{margin-left:4px;float:right}
@@ -141,7 +141,7 @@ footer nav.with-labels abbr{display:block !important;margin-top:-8px;z-index:1;f
 .framed{border:2px solid #fff}
 .round{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
 .block{display:block}
-.tag{display:inline-block;padding:0 3px;font-size:11px;line-height:1.3em;text-align:center}
+.tag{display:inline-block;padding:0 3px;font-size:11px !important;line-height:1.25em;height:1.35em;text-align:center}
 .margin.bottom{margin-bottom:5px}
 [data-control=carousel]{overflow:hidden;list-style:none;margin:0}
 .text.thin{font-weight:300}
@@ -303,8 +303,8 @@ section.show > [data-control="pull"].rotate > .icon{-webkit-transform:rotate(180
 section.show > [data-control="pull"].refresh > .icon{display:none}
 section.show > [data-control="pull"].refresh > .loading{display:inline-block}
 
-.splash{text-align:center;font-size:1.2em;}
-.splash > form{margin:28px}
+.splash{text-align:center;}
+.splash > form{margin:24px 32px}
 .splash img{max-width:206px;margin:20% auto 0%}
 .splash h1{margin-top:20%;font-size:2.2em;font-weight:bold}
 .splash .button{margin-top:10px}
