--- a/src/stylesheets/lungo.widgets.splash.styl
+++ b/src/stylesheets/lungo.widgets.splash.styl
@@ -12,10 +12,9 @@
 
 .splash
   text-align: center
-  font-size: 1.2em
 
   & > form
-    margin: 28px
+    margin: 24px 32px
 
   & img
     max-width: 206px
