--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -60,8 +60,9 @@
 .tag
   display: inline-block
   padding: 0 3px
-  font-size: FONT_SIZE_TINY
-  line-height: 1.3em
+  font-size: FONT_SIZE_TINY !important
+  line-height: 1.25em
+  height: 1.35em
   text-align: center
 
 size = 5px
