--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -55,6 +55,7 @@ body
 
 /* -------------------------- LAYOUT COLORS -------------------------- */
 section
+  background-color: DARK
   & > header
     background-color: THEME
     box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 THEME_light, inset 0 -1px 0 THEME_dark
