Lists items with more vertical padding

--- a/src/stylesheets/lungo.layout.list.styl
+++ b/src/stylesheets/lungo.layout.list.styl
@@ -13,7 +13,7 @@
 .list
   & li
     list-style-type: none
-    padding: 10px
+    padding: 15px 10px
     position: relative
 
     &, & a, & small, & .right
@@ -44,9 +44,9 @@
 
     &.thumb
       & img, & .icon
-        margin: -10px 10px -10px -10px
-        height: 53px !important
-        width:53px !important
+        margin: -15px 10px -15px -10px
+        height: 63px !important
+        width:63px !important
         font-size: 3.6em
 
     &.anchor
