:active in list element

--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -168,7 +168,7 @@ nav
       border-top: solid 1px  DARK
     &:not(:last-child)
       border-bottom: solid 1px DARKEST
-    &.active
+    &.active, &:active
       background: THEME
       border-color: transparent
       & strong, & small, & .icon
