--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -19,3 +19,7 @@ FONT_SIZE_SMALL     = 0.9em
 FONT_SIZE_BIG       = 1.2em
 
 TRANSITION_TIME     = 350ms
+
+// @import url("https://raw.github.com/soyjavi/CSSmethods/master/stylus/vendor.styl")
+@import "vendor.styl"
+
