--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -7,8 +7,8 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "import/constants.styl"
-@import "import/vendor.styl"
+@import "constants.styl"
+@import url("https://raw.github.com/soyjavi/CSSmethods/master/stylus/vendor.styl")
 
 body
   &[data-position="absolute"] > section
