--- a/src/stylesheets/lungo.icon.styl
+++ b/src/stylesheets/lungo.icon.styl
@@ -7,8 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "import/constants.styl"
-@import "import/vendor.styl"
+@import "constants.styl"
 
 @font-face
   font-family: 'lungojsicon'
