--- a/src/stylesheets/lungo.widgets.notification.styl
+++ b/src/stylesheets/lungo.widgets.notification.styl
@@ -7,8 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "import/constants.styl"
-@import "import/vendor.styl"
+@import "constants.styl"
 
 OPACITY = rgba(0,0,0,0.75)
 LOADING = 104px
