--- a/src/stylesheets/lungo.widgets.pull.styl
+++ b/src/stylesheets/lungo.widgets.pull.styl
@@ -7,8 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "import/constants.styl"
-@import "import/vendor.styl"
+@import "constants.styl"
 
 section.show > [data-control="pull"]
   position: absolute
