--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -7,8 +7,7 @@
  * @author Javier Jimenez Villar <javi@tapquo.com> || @soyjavi
  */
 
-@import "import/constants.styl"
-@import "import/vendor.styl"
+@import "constants.styl"
 
 .overthrow-enabled .overthrow
   overflow: auto
