--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -20,6 +20,6 @@ FONT_SIZE_BIG       = 1.2em
 
 TRANSITION_TIME     = 350ms
 
-// @import url("https://raw.github.com/soyjavi/CSSmethods/master/stylus/vendor.styl")
+/* @import url("https://raw.github.com/soyjavi/CSSmethods/master/stylus/vendor.styl") */
 @import "vendor.styl"
 
