--- a/src/stylesheets/vendor.styl
+++ b/src/stylesheets/vendor.styl
@@ -1,8 +1,8 @@
 vendor(prop, args)
   -webkit-{prop} args
   -moz-{prop} args
-  -ms-{prop} args
-  -o-{prop} args
+  // -ms-{prop} args
+  // -o-{prop} args
   {prop} args
 
 border-radius()
