button.anchor supported in all navigators

--- a/src/stylesheets/lungo.widgets.button.styl
+++ b/src/stylesheets/lungo.widgets.button.styl
@@ -32,7 +32,8 @@
     font-size: FONT_SIZE_BIG
 
   &.anchor
-    width: 100%
+    display: block
+    width: inherit
     position: relative
     & .icon
       position: absolute
