--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -53,7 +53,7 @@ section
   background-color: DARK
   & > header
     background-color: THEME
-    box-shadow 0 1px 3px rgba(0,0,0,0.25), inset 0 1px 0 THEME_light, inset 0 -1px 0 THEME_dark
+    box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 THEME_light, inset 0 -1px 0 THEME_dark
     color: #fff
     border-radius 4px 4px 0 0
 
@@ -108,6 +108,23 @@ nav
     color: lighten(DARK, 20%)
     &:active
       color: lighten(DARK, 50%)
+
+  &[data-control=menu]
+    COLOR = DARK
+    background: COLOR
+    box-shadow 0 2px 0 rgba(0,0,0,0.15)
+    & > a
+      color: #fff
+      text-shadow 0 1px 0 #111
+      font-weight: 700
+      border-bottom: 1px solid darken(COLOR, 40%)
+      border-top: 1px solid lighten(COLOR, 5%)
+      &:active
+        background: #111
+        border-color: transparent
+      & > .icon
+        color: lighten(COLOR, 25%)
+
 
 /* -------------------------- LISTS -------------------------- */
 .list
@@ -242,7 +259,7 @@ article
       background-color: COLOR_cancel
 
 
-/* -------------------------- BUTTONS -------------------------- */
+/* -------------------------- FORMS -------------------------- */
 FORM_shadow_form =  'inset 0 1px 2px rgba(0,0,0,0.1)'
 FORM_shadow_form_active =  'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef'
 FORM_border_color = #D0D4C6
@@ -310,3 +327,4 @@ form, .form
       background-color: #ddd
       & .value
         background-color: THEME_light
+
