Added CSSmethods submodule

--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -1,25 +1,22 @@
-/* DIMENSIONS */
-HEADER_FOOTER_HEIGHT = 44px
-HEADER_GROUPBAR_HEIGHT = 30px
+@import "CSSmethods/vendor.styl"
 
-ARTICLE_BOTTOM = (HEADER_FOOTER_HEIGHT - 1)
-ARTICLE_WITH_HEADER_EXTENDED = (HEADER_FOOTER_HEIGHT + HEADER_GROUPBAR_HEIGHT)
+/* CONSTANTS */
+HEADER_FOOTER_HEIGHT          = 44px
+HEADER_GROUPBAR_HEIGHT        = 30px
 
-ASIDE_WIDTH         = 264px
-ASIDE_WIDTH_SMALL   = 64px
-ASIDE_SMALL_ICON    = 48px
+ARTICLE_BOTTOM                = (HEADER_FOOTER_HEIGHT - 1)
+ARTICLE_WITH_HEADER_EXTENDED  = (HEADER_FOOTER_HEIGHT + HEADER_GROUPBAR_HEIGHT)
 
+ASIDE_WIDTH                    = 264px
+ASIDE_WIDTH_SMALL              = 64px
+ASIDE_SMALL_ICON               = 48px
 
-BORDER_RADIUS       = 2px
+BORDER_RADIUS                  = 2px
 
-DEFAULT_TRANSITION  = easeOutSine
+DEFAULT_TRANSITION             = easeOutSine
 
-FONT_SIZE_TINY      = 11px
-FONT_SIZE_SMALL     = 0.9em
-FONT_SIZE_BIG       = 1.2em
+FONT_SIZE_TINY                 = 11px
+FONT_SIZE_SMALL                = 0.9em
+FONT_SIZE_BIG                  = 1.2em
 
-TRANSITION_TIME     = 350ms
-
-/* @import url("https://raw.github.com/soyjavi/CSSmethods/master/stylus/vendor.styl") */
-@import "vendor.styl"
-
+TRANSITION_TIME                = 350ms
