--- a/src/stylesheets/lungo.layout.nav.styl
+++ b/src/stylesheets/lungo.layout.nav.styl
@@ -68,8 +68,8 @@ nav
 
 
   &.groupbar
-    position: relative
-    top: HEADER_FOOTER_HEIGHT
+    // position: relative
+    // top: HEADER_FOOTER_HEIGHT
     height: HEADER_GROUPBAR_HEIGHT
     width: 100%
     z-index: 2
