--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -34,7 +34,7 @@ THEME_dark      = darken(THEME, 15%)
 
 /* -------------------------- DEFAULTS -------------------------- */
 body
-  background-color: DARK
+  background-color: #000
   color: COLOR
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
