--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -16,14 +16,6 @@ body, html
   padding: 0
   overflow: hidden
 
-body
-  // &[data-position="absolute"] > section
-  //   position: absolute
-
-  // &[data-position="fixed"] > section
-  //   position: fixed
-
-
 aside, section
   display-box()
   box-orient(vertical)
@@ -31,12 +23,13 @@ aside, section
   & > header, > footer
     box-flex(0)
     z-index: 3
+    position: relative
   & > article
     box-flex(1)
     z-index: 0
 
 section
   z-index: 2
+  width: inherit
   &:not(.show)
     z-index: 1
-    display: none
