--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -1,7 +1,8 @@
 @import "constants.styl"
 
 /* ==== Tablet ==== */
-@media only screen and (min-width: 768px) and (max-width: 1280px)
+// @media only screen and (min-width: 768px) and (max-width: 1280px)
+@media only screen and (min-width: 768px)
 
   body
     display-box()
@@ -20,3 +21,5 @@
 
   section
     box-flex(1)
+    &:not(.show)
+      display: none !important
